--- a/src/partials/load-more-btn.html
+++ b/src/partials/load-more-btn.html
@@ -1,2 +1,2 @@
-<button type="button" class="load-more">Load more</button>
+<!-- <button type="button" class="load-more">Load more</button> -->
 <div class="js-loader"></div>
