--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -27,6 +27,10 @@
   background-position: center;
 }
 
+body {
+  background-color: rgb(209, 217, 226);
+}
+
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -38,7 +42,6 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
-
 }
 
 .gallery img {
@@ -46,6 +49,7 @@
   width: 100%;
   height: 200px;
   object-fit: cover;
+  border-radius: 4px;
 }
 
 .info {
@@ -104,4 +108,20 @@ input {
 
 .photo-card {
   box-shadow: -1px 6px 12px -1px #D5D0FF;
+}
+
+
+.tui-pagination .tui-page-btn {
+  font-size: 14px !important;
+}
+
+.tui-pagination .tui-page-btn:hover {
+  background-color: #4b96e6 !important;
+  color: #ddd;
+}
+
+.tui-pagination .tui-is-selected,
+.tui-pagination strong {
+  color: #fff;
+  background: rgb(12, 74, 129) !important;
 }
