--- a/src/partials/load-more-btn.html
+++ b/src/partials/load-more-btn.html
@@ -1,2 +1,4 @@
 <!-- <button type="button" class="load-more">Load more</button> -->
 <div class="js-loader"></div>
+<button class="scrollToTopBtn">☝️</button>
+<footer></footer>
