--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -62,20 +62,25 @@ body {
 }
 
 .search-form {
-  position: sticky;
-  top: 0;
   background-color: rgb(12, 74, 129);
   display: flex;
   justify-content: center;
   padding: 15px;
   margin-bottom: 20px;
+  position: relative;
 }
 
 input {
-  padding: 5px;
+  padding-left: 10px;
 }
 
 .search_btn {
+  box-shadow: 0px 0px 30px 8px #000000;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  right: 18px;
   cursor: pointer;
   background-color: rgb(248, 243, 243);
   border: rgb(248, 243, 243);
@@ -124,4 +129,34 @@ input {
 .tui-pagination strong {
   color: #fff;
   background: rgb(12, 74, 129) !important;
+}
+
+.scrollToTopBtn {
+  background-color: rgb(12, 74, 129);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 20px;
+  line-height: 48px;
+  width: 48px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 100;
+  opacity: 0;
+  transform: translateY(100px);
+  transition: all 0.5s ease;
+
+  &:hover {
+    background-color: #4b96e6;
+  }
+}
+
+.showBtn {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+input {
+  border-radius: 10px;
 }
